Updated body tag of mainWorking.css

--- a/_css/mainWorking.css
+++ b/_css/mainWorking.css
@@ -168,6 +168,11 @@ header {
 	height: 150px;
 }
 
+body {
+	width: 1280px;
+	margin: auto;
+}
+
 /* Content region styles -----------------------------------------------------------------------------------------------------------*/
 
 /*header styles*/
